--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Victornz Memories</title>
-
   <style>
     body {
       margin: 0;
@@ -25,8 +24,8 @@
       padding: 30px;
       position: relative;
       z-index: 0;
-      --line-start: 26px; /* tinggi awal garis */
-      --line-gap: 168px; /* jarak antar baris */
+      --line-start: 26px;
+      --line-gap: 168px;
     }
 
     .line {
@@ -123,7 +122,6 @@
       display: none;
     }
 
-    /* Menu klik kanan */
     .context-menu {
       position: absolute;
       display: none;
@@ -156,7 +154,6 @@
       to {opacity: 1; transform: scale(1);}
     }
 
-    /* Lightbox */
     #lightbox {
       display: none;
       position: fixed;
@@ -175,7 +172,6 @@
     }
   </style>
 </head>
-
 <body>
   <h1>
     <img src="title2.png" alt="Victornz Memories" class="title-logo">
@@ -183,14 +179,12 @@
 
   <div class="gallery" id="gallery"></div>
 
-  <!-- Menu klik kanan -->
   <div id="contextMenu" class="context-menu">
     <button data-action="rename">Ubah Nama</button>
     <button data-action="change">Ubah Foto</button>
     <button data-action="delete">Hapus</button>
   </div>
 
-  <!-- Lightbox -->
   <div id="lightbox">
     <img id="lightboxImg" src="">
   </div>
@@ -206,11 +200,6 @@
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightboxImg');
     let selectedIndex = null;
-
-    // --- GANTI INI DENGAN TOKEN & REPO ANDA ---
-    const githubToken = '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';
-    const githubRepo = 'Qris-tian/memories';
-    const branch = 'main'; // bisa diganti master jika repo pakai master
 
     let photos = JSON.parse(localStorage.getItem('victornzPhotos')) || [];
 
@@ -255,6 +244,7 @@
 
         gallery.appendChild(container);
       });
+
       setTimeout(updateLines, 100);
     }
 
@@ -269,9 +259,12 @@
     contextMenu.addEventListener('click', (e) => {
       if (!e.target.dataset.action) return;
       const action = e.target.dataset.action;
-      if (action === 'rename') editPhoto(selectedIndex);
-      else if (action === 'change') changePhoto(selectedIndex);
-      else if (action === 'delete') {
+
+      if (action === 'rename') {
+        editPhoto(selectedIndex);
+      } else if (action === 'change') {
+        changePhoto(selectedIndex);
+      } else if (action === 'delete') {
         if (confirm('Yakin ingin menghapus foto ini?')) {
           photos.splice(selectedIndex, 1);
           localStorage.setItem('victornzPhotos', JSON.stringify(photos));
@@ -293,12 +286,49 @@
         const endIndex = Math.min(startIndex + photosPerRow, photos.length);
         const rowPhotos = photos.slice(startIndex, endIndex);
         if (rowPhotos.length < 2) continue;
+
         const line = document.createElement('div');
         line.className = 'line';
         line.style.top = `${start + i * gap}px`;
         gallery.appendChild(line);
       }
     }
+
+    addBtn.onclick = () => fileInput.click();
+
+    // === Upload ke ImgBB ===
+    fileInput.onchange = async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const formData = new FormData();
+      formData.append("image", file);
+
+      try {
+        const response = await fetch("https://api.imgbb.com/1/upload?key=YOUR_API_KEY_HERE", {
+          method: "POST",
+          body: formData
+        });
+        const result = await response.json();
+
+        if (result.success) {
+          const imageUrl = result.data.url;
+          const newPhoto = {
+            url: imageUrl,
+            title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
+            date: new Date().toLocaleDateString()
+          };
+          photos.push(newPhoto);
+          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+          renderPhotos();
+        } else {
+          alert("Gagal mengunggah gambar ke ImgBB.");
+        }
+      } catch (error) {
+        alert("Terjadi kesalahan saat mengunggah gambar.");
+        console.error(error);
+      }
+    };
 
     function editPhoto(index) {
       const photo = photos[index];
@@ -314,70 +344,28 @@
       const input = document.createElement('input');
       input.type = 'file';
       input.accept = 'image/*';
-      input.onchange = (e) => {
+      input.onchange = async (e) => {
         const file = e.target.files[0];
-        if (file) uploadAndAddPhoto(file, index);
+        if (!file) return;
+        const formData = new FormData();
+        formData.append("image", file);
+
+        const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
+          method: "POST",
+          body: formData
+        });
+        const result = await response.json();
+
+        if (result.success) {
+          photos[index].url = result.data.url;
+          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+          renderPhotos();
+        } else {
+          alert("Gagal mengganti gambar.");
+        }
       };
       input.click();
     }
-
-    // --- FUNGSI UPLOAD KE GITHUB ---
-    async function uploadToGitHub(file, fileName) {
-      const content = await file.arrayBuffer();
-      const base64 = btoa(
-        new Uint8Array(content).reduce((data, byte) => data + String.fromCharCode(byte), '')
-      );
-
-      const url = `https://api.github.com/repos/${githubRepo}/contents/${fileName}`;
-      const response = await fetch(url, {
-        method: 'PUT',
-        headers: {
-          Authorization: `token ${githubToken}`,
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          message: `Add ${fileName}`,
-          content: base64,
-          branch: branch
-        })
-      });
-
-      const result = await response.json();
-      if (result.content && result.content.download_url) return result.content.download_url;
-      else throw new Error('Upload gagal');
-    }
-
-    // --- TAMBAH FOTO BARU ---
-    async function uploadAndAddPhoto(file, index=null) {
-      const title = prompt('Masukkan judul foto:') || 'Tanpa Judul';
-      const fileName = `image(${Date.now()}).jpg`;
-
-      try {
-        const githubUrl = await uploadToGitHub(file, fileName);
-        const newPhoto = {
-          url: githubUrl,
-          title: title,
-          date: new Date().toLocaleDateString()
-        };
-
-        if (index !== null) photos[index] = newPhoto;
-        else photos.push(newPhoto);
-
-        localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-        renderPhotos();
-        alert('Upload sukses!');
-      } catch(err) {
-        console.error(err);
-        alert('Upload gagal!');
-      }
-    }
-
-    addBtn.onclick = () => fileInput.click();
-
-    fileInput.onchange = (e) => {
-      const file = e.target.files[0];
-      if (file) uploadAndAddPhoto(file);
-    };
 
     renderPhotos();
   </script>
