--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@
 
         gallery.appendChild(container);
       });
-
       setTimeout(updateLines, 100);
     }
 
@@ -260,11 +259,9 @@
       if (!e.target.dataset.action) return;
       const action = e.target.dataset.action;
 
-      if (action === 'rename') {
-        editPhoto(selectedIndex);
-      } else if (action === 'change') {
-        changePhoto(selectedIndex);
-      } else if (action === 'delete') {
+      if (action === 'rename') editPhoto(selectedIndex);
+      else if (action === 'change') changePhoto(selectedIndex);
+      else if (action === 'delete') {
         if (confirm('Yakin ingin menghapus foto ini?')) {
           photos.splice(selectedIndex, 1);
           localStorage.setItem('victornzPhotos', JSON.stringify(photos));
@@ -296,38 +293,45 @@
 
     addBtn.onclick = () => fileInput.click();
 
-    // === Upload ke ImgBB ===
+    // === Upload ke ImgBB (versi aman) ===
     fileInput.onchange = async (e) => {
       const file = e.target.files[0];
       if (!file) return;
 
-      const formData = new FormData();
-      formData.append("image", file);
+      const reader = new FileReader();
+      reader.onload = async (event) => {
+        const base64Data = event.target.result.split(',')[1];
+        const formData = new FormData();
+        formData.append('image', base64Data);
 
-      try {
-        const response = await fetch("https://api.imgbb.com/1/upload?key=YOUR_API_KEY_HERE", {
-          method: "POST",
-          body: formData
-        });
-        const result = await response.json();
+        try {
+          const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
+            method: "POST",
+            body: formData
+          });
 
-        if (result.success) {
-          const imageUrl = result.data.url;
-          const newPhoto = {
-            url: imageUrl,
-            title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
-            date: new Date().toLocaleDateString()
-          };
-          photos.push(newPhoto);
-          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-          renderPhotos();
-        } else {
-          alert("Gagal mengunggah gambar ke ImgBB.");
+          const data = await response.json();
+
+          if (response.ok && data.success) {
+            const newPhoto = {
+              url: data.data.url,
+              title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
+              date: new Date().toLocaleDateString()
+            };
+            photos.push(newPhoto);
+            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+            renderPhotos();
+          } else {
+            alert("Gagal upload ke ImgBB:\n" + (data.error?.message || "Tidak diketahui"));
+            console.error(data);
+          }
+        } catch (err) {
+          alert("Terjadi kesalahan saat mengupload: " + err.message);
+          console.error(err);
         }
-      } catch (error) {
-        alert("Terjadi kesalahan saat mengunggah gambar.");
-        console.error(error);
-      }
+      };
+
+      reader.readAsDataURL(file);
     };
 
     function editPhoto(index) {
@@ -347,22 +351,35 @@
       input.onchange = async (e) => {
         const file = e.target.files[0];
         if (!file) return;
-        const formData = new FormData();
-        formData.append("image", file);
 
-        const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
-          method: "POST",
-          body: formData
-        });
-        const result = await response.json();
+        const reader = new FileReader();
+        reader.onload = async (event) => {
+          const base64Data = event.target.result.split(',')[1];
+          const formData = new FormData();
+          formData.append('image', base64Data);
 
-        if (result.success) {
-          photos[index].url = result.data.url;
-          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-          renderPhotos();
-        } else {
-          alert("Gagal mengganti gambar.");
-        }
+          try {
+            const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
+              method: "POST",
+              body: formData
+            });
+
+            const data = await response.json();
+
+            if (response.ok && data.success) {
+              photos[index].url = data.data.url;
+              localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+              renderPhotos();
+            } else {
+              alert("Gagal mengganti gambar:\n" + (data.error?.message || "Tidak diketahui"));
+              console.error(data);
+            }
+          } catch (err) {
+            alert("Terjadi kesalahan saat mengganti gambar: " + err.message);
+            console.error(err);
+          }
+        };
+        reader.readAsDataURL(file);
       };
       input.click();
     }
