--- a/index.html
+++ b/index.html
@@ -293,43 +293,40 @@
 
     addBtn.onclick = () => fileInput.click();
 
-    // === Upload ke ImgBB (versi aman) ===
+// === Upload ke ImgBB (versi final) ===
     fileInput.onchange = async (e) => {
       const file = e.target.files[0];
       if (!file) return;
 
-      const reader = new FileReader();
-      reader.onload = async (event) => {
-        const base64Data = event.target.result.split(',')[1];
-        const formData = new FormData();
-        formData.append('image', base64Data);
+      const formData = new FormData();
+      formData.append("image", file);
 
-        try {
-          const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
-            method: "POST",
-            body: formData
-          });
+      try {
+        const response = await fetch("https://api.imgbb.com/1/upload?key=648f5c0ea8d7f135cee4d983528a80e0", {
+          method: "POST",
+          body: formData
+        });
 
-          const data = await response.json();
+        const data = await response.json();
+        console.log("Response dari ImgBB:", data); // untuk debugging
 
-          if (response.ok && data.success) {
-            const newPhoto = {
-              url: data.data.url,
-              title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
-              date: new Date().toLocaleDateString()
-            };
-            photos.push(newPhoto);
-            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-            renderPhotos();
-          } else {
-            alert("Gagal upload ke ImgBB:\n" + (data.error?.message || "Tidak diketahui"));
-            console.error(data);
-          }
-        } catch (err) {
-          alert("Terjadi kesalahan saat mengupload: " + err.message);
-          console.error(err);
+        if (response.ok && data.success) {
+          const newPhoto = {
+            url: data.data.url, // ← ambil URL asli
+            title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
+            date: new Date().toLocaleDateString()
+          };
+          photos.push(newPhoto);
+          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+          renderPhotos();
+        } else {
+          alert("Gagal upload ke ImgBB: " + (data.error?.message || "Respon tidak valid"));
         }
-      };
+      } catch (err) {
+        alert("Terjadi kesalahan saat upload: " + err.message);
+        console.error(err);
+      }
+    };
 
       reader.readAsDataURL(file);
     };
