--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Victornz Memories</title>
   <style>
     body {
@@ -116,6 +116,7 @@
       font-size: 36px;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      z-index: 50;
     }
 
     input[type="file"] {
@@ -170,6 +171,18 @@
       max-height: 90%;
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
+
+    /* small helper for debug output (optional) */
+    .debug {
+      font-family: monospace;
+      white-space: pre-wrap;
+      background: rgba(255,255,255,0.9);
+      color: #111;
+      padding: 8px;
+      border-radius: 6px;
+      margin: 8px;
+      max-width: 95%;
+    }
   </style>
 </head>
 <body>
@@ -192,15 +205,20 @@
   <input type="file" id="fileInput" accept="image/*">
   <button class="add-btn" id="addBtn">+</button>
 
+  <!-- optional debug area (visible if you want) -->
+  <div id="debugArea" class="debug" style="display:none"></div>
+
   <script>
+    const API_KEY = "YOUR_API_KEY_HERE"; // <-- GANTI DENGAN API KEY IMGBB MU (tanpa spasi)
     const gallery = document.getElementById('gallery');
     const fileInput = document.getElementById('fileInput');
     const addBtn = document.getElementById('addBtn');
     const contextMenu = document.getElementById('contextMenu');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightboxImg');
-    let selectedIndex = null;
+    const debugArea = document.getElementById('debugArea');
 
+    let selectedIndex = null;
     let photos = JSON.parse(localStorage.getItem('victornzPhotos')) || [];
 
     function renderPhotos() {
@@ -273,8 +291,8 @@
 
     function updateLines() {
       document.querySelectorAll('.line').forEach(line => line.remove());
-      const start = parseInt(getComputedStyle(gallery).getPropertyValue('--line-start'));
-      const gap = parseInt(getComputedStyle(gallery).getPropertyValue('--line-gap'));
+      const start = parseInt(getComputedStyle(gallery).getPropertyValue('--line-start')) || 26;
+      const gap = parseInt(getComputedStyle(gallery).getPropertyValue('--line-gap')) || 168;
       const photosPerRow = 2;
       const totalRows = Math.ceil(photos.length / photosPerRow);
 
@@ -291,28 +309,42 @@
       }
     }
 
-    addBtn.onclick = () => fileInput.click();
+    addBtn.addEventListener('click', () => fileInput.click());
 
-// === Upload ke ImgBB (versi final) ===
+    // helper untuk debug (opsional)
+    function debug(msg, show = true) {
+      console.log(msg);
+      if (!debugArea) return;
+      if (show) {
+        debugArea.style.display = 'block';
+        debugArea.textContent = typeof msg === 'string' ? msg : JSON.stringify(msg, null, 2);
+      }
+    }
+
+    // === Upload ke ImgBB (mengirim file/Blob) ===
     fileInput.onchange = async (e) => {
       const file = e.target.files[0];
       if (!file) return;
+
+      // optional: small filesize guard
+      // if (file.size > 32 * 1024 * 1024) { alert("File terlalu besar (>32MB)"); return; }
 
       const formData = new FormData();
       formData.append("image", file);
 
       try {
-        const response = await fetch("https://api.imgbb.com/1/upload?key=bdd6cd5b0b473989462bbdb8acfd05eb", {
+        const response = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, {
           method: "POST",
           body: formData
         });
 
         const data = await response.json();
-        console.log("Response dari ImgBB:", data); // untuk debugging
+        debug(data, true); // tampilkan respons (bisa dimatikan)
 
-        if (response.ok && data.success) {
+        // periksa hasil: pastikan ada data.data.url
+        if (response.ok && data && data.data && data.data.url) {
           const newPhoto = {
-            url: data.data.url, // ← ambil URL asli
+            url: data.data.url,
             title: prompt('Masukkan judul foto:') || 'Tanpa Judul',
             date: new Date().toLocaleDateString()
           };
@@ -320,15 +352,15 @@
           localStorage.setItem('victornzPhotos', JSON.stringify(photos));
           renderPhotos();
         } else {
-          alert("Gagal upload ke ImgBB: " + (data.error?.message || "Respon tidak valid"));
+          alert("Gagal upload ke ImgBB:\n" + (data?.error?.message || JSON.stringify(data)));
         }
       } catch (err) {
         alert("Terjadi kesalahan saat upload: " + err.message);
         console.error(err);
+      } finally {
+        // reset input agar event onchange bisa dipicu lagi untuk file yang sama
+        fileInput.value = "";
       }
-    };
-
-      reader.readAsDataURL(file);
     };
 
     function editPhoto(index) {
@@ -341,6 +373,7 @@
       }
     }
 
+    // ganti foto: upload file baru ke ImgBB lalu ganti url
     function changePhoto(index) {
       const input = document.createElement('input');
       input.type = 'file';
@@ -349,39 +382,43 @@
         const file = e.target.files[0];
         if (!file) return;
 
-        const reader = new FileReader();
-        reader.onload = async (event) => {
-          const base64Data = event.target.result.split(',')[1];
-          const formData = new FormData();
-          formData.append('image', base64Data);
+        const formData = new FormData();
+        formData.append('image', file);
 
-          try {
-            const response = await fetch("https://api.imgbb.com/1/upload?key=bdd6cd5b0b473989462bbdb8acfd05eb", {
-              method: "POST",
-              body: formData
-            });
+        try {
+          const response = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, {
+            method: "POST",
+            body: formData
+          });
+          const data = await response.json();
+          debug(data, true);
 
-            const data = await response.json();
-
-            if (response.ok && data.success) {
-              photos[index].url = data.data.url;
-              localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-              renderPhotos();
-            } else {
-              alert("Gagal mengganti gambar:\n" + (data.error?.message || "Tidak diketahui"));
-              console.error(data);
-            }
-          } catch (err) {
-            alert("Terjadi kesalahan saat mengganti gambar: " + err.message);
-            console.error(err);
+          if (response.ok && data && data.data && data.data.url) {
+            photos[index].url = data.data.url;
+            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+            renderPhotos();
+          } else {
+            alert("Gagal mengganti gambar:\n" + (data?.error?.message || JSON.stringify(data)));
+            console.error(data);
           }
-        };
-        reader.readAsDataURL(file);
+        } catch (err) {
+          alert("Terjadi kesalahan saat mengganti gambar: " + err.message);
+          console.error(err);
+        } finally {
+          input.value = "";
+        }
       };
       input.click();
     }
 
+    // inisialisasi render
     renderPhotos();
+
+    // update garis/pin jika ukuran viewport berubah
+    window.addEventListener('resize', () => {
+      setTimeout(updateLines, 100);
+    });
+
   </script>
 </body>
 </html>
