--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <div id="debugArea" class="debug" style="display:none"></div>
 
   <script>
-    const API_KEY = "YOUR_API_KEY_HERE"; // <-- GANTI DENGAN API KEY IMGBB MU (tanpa spasi)
+    const API_KEY = "2328fd3488b28a717bfb8c27107a98bd"; // <-- GANTI DENGAN API KEY IMGBB MU (tanpa spasi)
     const gallery = document.getElementById('gallery');
     const fileInput = document.getElementById('fileInput');
     const addBtn = document.getElementById('addBtn');
