--- a/index.html
+++ b/index.html
@@ -24,19 +24,6 @@
       padding: 30px;
       position: relative;
       z-index: 0;
-      --line-start: 26px;
-      --line-gap: 168px;
-    }
-
-    .line {
-      position: absolute;
-      height: 3px;
-      background-color: red;
-      left: 26%;
-      width: 48%;
-      z-index: 1;
-      border-radius: 5px;
-      transition: top 0.3s ease;
     }
 
     .photo {
@@ -68,13 +55,6 @@
       font-size: 14px;
       color: gray;
       font-weight: bold;
-    }
-
-    .photo-date {
-      position: absolute;
-      bottom: -18px;
-      right: -4px;
-      font-size: 0px;
     }
 
     .pin {
@@ -123,32 +103,6 @@
       display: none;
     }
 
-    .context-menu {
-      position: absolute;
-      display: none;
-      flex-direction: column;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-      z-index: 9999;
-      overflow: hidden;
-    }
-
-    .context-menu button {
-      background: none;
-      border: none;
-      padding: 8px 12px;
-      text-align: left;
-      width: 100%;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    .context-menu button:hover {
-      background-color: #eee;
-    }
-
     #lightbox {
       display: none;
       position: fixed;
@@ -165,7 +119,6 @@
       max-height: 90%;
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
-
   </style>
 </head>
 <body>
@@ -175,12 +128,6 @@
 
   <div class="gallery" id="gallery"></div>
 
-  <div id="contextMenu" class="context-menu">
-    <button data-action="rename">Ubah Nama</button>
-    <button data-action="change">Ubah Foto</button>
-    <button data-action="delete">Hapus</button>
-  </div>
-
   <div id="lightbox">
     <img id="lightboxImg" src="">
   </div>
@@ -189,21 +136,19 @@
   <button class="add-btn" id="addBtn">+</button>
 
   <script>
-    const API_KEY = "2328fd3488b28a717bfb8c27107a98bd";
+    const API_KEY = "2328fd3488b28a717bfb8c27107a98bd"; // pastikan dari imgbb API Key benar
     const gallery = document.getElementById('gallery');
     const fileInput = document.getElementById('fileInput');
     const addBtn = document.getElementById('addBtn');
-    const contextMenu = document.getElementById('contextMenu');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightboxImg');
 
-    let selectedIndex = null;
     let photos = JSON.parse(localStorage.getItem('victornzPhotos')) || [];
 
-    // Render foto ke galeri
+    // Render galeri
     function renderPhotos() {
       gallery.innerHTML = '';
-      photos.forEach((photo, index) => {
+      photos.forEach((photo) => {
         const container = document.createElement('div');
         container.className = 'photo';
         container.style.setProperty('--rotate', `${Math.random() * 10 - 5}deg`);
@@ -213,27 +158,15 @@
 
         const img = document.createElement('img');
         img.src = photo.url;
+        img.alt = photo.title;
 
         const title = document.createElement('div');
         title.className = 'photo-title';
         title.textContent = photo.title || 'Tanpa Judul';
 
-        const date = document.createElement('div');
-        date.className = 'photo-date';
-        date.textContent = photo.date;
-
         container.appendChild(pin);
         container.appendChild(img);
         container.appendChild(title);
-        container.appendChild(date);
-
-        container.addEventListener('contextmenu', (e) => {
-          e.preventDefault();
-          selectedIndex = index;
-          contextMenu.style.display = 'flex';
-          contextMenu.style.top = `${e.pageY}px`;
-          contextMenu.style.left = `${e.pageX}px`;
-        });
 
         container.addEventListener('click', () => {
           lightboxImg.src = photo.url;
@@ -244,28 +177,8 @@
       });
     }
 
-    document.addEventListener('click', () => {
-      contextMenu.style.display = 'none';
-    });
-
     lightbox.addEventListener('click', () => {
       lightbox.style.display = 'none';
-    });
-
-    contextMenu.addEventListener('click', (e) => {
-      if (!e.target.dataset.action) return;
-      const action = e.target.dataset.action;
-
-      if (action === 'rename') editPhoto(selectedIndex);
-      else if (action === 'change') changePhoto(selectedIndex);
-      else if (action === 'delete') {
-        if (confirm('Yakin ingin menghapus foto ini?')) {
-          photos.splice(selectedIndex, 1);
-          localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-          renderPhotos();
-        }
-      }
-      contextMenu.style.display = 'none';
     });
 
     addBtn.addEventListener('click', () => fileInput.click());
@@ -285,6 +198,7 @@
         });
 
         const data = await response.json();
+
         if (data.success && data.data && data.data.url) {
           const newPhoto = {
             url: data.data.url,
@@ -295,55 +209,16 @@
           localStorage.setItem("victornzPhotos", JSON.stringify(photos));
           renderPhotos();
         } else {
-          alert("Upload gagal! Coba lagi.\n\n" + (data.error?.message || JSON.stringify(data)));
+          console.error(data);
+          alert("Gagal upload ke ImgBB: " + (data.error?.message || "Tidak diketahui"));
         }
       } catch (err) {
-        alert("Terjadi kesalahan: " + err.message);
+        console.error(err);
+        alert("Terjadi kesalahan saat upload: " + err.message);
       } finally {
         fileInput.value = "";
       }
     };
-
-    function editPhoto(index) {
-      const newTitle = prompt('Ubah judul foto:', photos[index].title);
-      if (newTitle !== null) {
-        photos[index].title = newTitle;
-        localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-        renderPhotos();
-      }
-    }
-
-    function changePhoto(index) {
-      const input = document.createElement('input');
-      input.type = 'file';
-      input.accept = 'image/*';
-      input.onchange = async (e) => {
-        const file = e.target.files[0];
-        if (!file) return;
-
-        const formData = new FormData();
-        formData.append('image', file);
-
-        try {
-          const response = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, {
-            method: "POST",
-            body: formData
-          });
-          const data = await response.json();
-
-          if (data.success && data.data && data.data.url) {
-            photos[index].url = data.data.url;
-            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
-            renderPhotos();
-          } else {
-            alert("Gagal mengganti foto!");
-          }
-        } catch (err) {
-          alert("Kesalahan: " + err.message);
-        }
-      };
-      input.click();
-    }
 
     renderPhotos();
   </script>
