--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       box-shadow: 0 5px 10px rgba(0,0,0,0.3);
       transform: rotate(var(--rotate));
       transform-origin: 50% -20px;
-      cursor: pointer;
       position: relative;
-      z-index: 0;
+      z-index: 1;
+      overflow: visible; /* ✅ agar menu tidak terpotong */
     }
 
     .photo img {
@@ -45,6 +45,7 @@
       height: 100%;
       object-fit: cover;
       box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
+      pointer-events: none; /* ✅ agar menu di atas tetap bisa diklik */
     }
 
     .photo-title {
@@ -55,6 +56,7 @@
       font-size: 14px;
       color: gray;
       font-weight: bold;
+      z-index: 3;
     }
 
     .pin {
@@ -63,11 +65,58 @@
       background-color: red;
       border-radius: 50%;
       position: absolute;
-      top: -28px;
+      top: -29px;
       left: 50%;
       transform: translateX(-50%);
-      z-index: 2;
+      z-index: 3;
       box-shadow: 0px 0px 2px black;
+    }
+
+    /* ✅ Tombol titik tiga di bagian frame */
+    .menu-btn {
+      position: absolute;
+      top: -25px; /* di bagian frame atas */
+      right: -3px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      z-index: 4;
+      user-select: none;
+      border-radius: 3px;
+      padding: 0 3px;
+    }
+
+    .menu-btn:hover {
+      color: #555;
+    }
+
+    /* ✅ Menu muncul di atas segalanya */
+    .menu {
+      display: none;
+      position: absolute;
+      top: -5px;
+      right: -90px;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      font-size: 13px;
+      z-index: 999; /* di atas segalanya */
+      overflow: hidden;
+    }
+
+    .menu button {
+      display: block;
+      width: 100%;
+      padding: 6px 10px;
+      background: none;
+      border: none;
+      text-align: left;
+      cursor: pointer;
+    }
+
+    .menu button:hover {
+      background: #f0f0f0;
     }
 
     .title-logo {
@@ -81,26 +130,6 @@
 
     .title-logo:hover {
       transform: scale(1.05);
-    }
-
-    .add-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 60px;
-      height: 60px;
-      border: none;
-      border-radius: 50%;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 36px;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
-      z-index: 50;
-    }
-
-    input[type="file"] {
-      display: none;
     }
 
     #lightbox {
@@ -132,23 +161,17 @@
     <img id="lightboxImg" src="">
   </div>
 
-  <input type="file" id="fileInput" accept="image/*">
-  <button class="add-btn" id="addBtn">+</button>
-
   <script>
-    const API_KEY = "2328fd3488b28a717bfb8c27107a98bd"; 
     const gallery = document.getElementById('gallery');
-    const fileInput = document.getElementById('fileInput');
-    const addBtn = document.getElementById('addBtn');
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightboxImg');
 
     let photos = JSON.parse(localStorage.getItem('victornzPhotos')) || [];
 
-    // Render galeri
+    // ✅ Render galeri dengan menu titik tiga di frame
     function renderPhotos() {
       gallery.innerHTML = '';
-      photos.forEach((photo) => {
+      photos.forEach((photo, index) => {
         const container = document.createElement('div');
         container.className = 'photo';
         container.style.setProperty('--rotate', `${Math.random() * 10 - 5}deg`);
@@ -164,15 +187,68 @@
         title.className = 'photo-title';
         title.textContent = photo.title || 'Tanpa Judul';
 
-        container.appendChild(pin);
-        container.appendChild(img);
-        container.appendChild(title);
+        const menuBtn = document.createElement('div');
+        menuBtn.className = 'menu-btn';
+        menuBtn.innerHTML = '⋮';
+
+        const menu = document.createElement('div');
+        menu.className = 'menu';
+        menu.innerHTML = `
+          <button class="rename-btn">📝 Ubah nama</button>
+          <button class="replace-btn">🖼️ Ubah foto</button>
+          <button class="delete-btn">🗑️ Hapus</button>
+        `;
+
+        // Klik titik tiga
+        menuBtn.addEventListener('click', (e) => {
+          e.stopPropagation();
+          document.querySelectorAll('.menu').forEach(m => m.style.display = 'none');
+          menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+        });
+
+        document.addEventListener('click', () => {
+          menu.style.display = 'none';
+        });
+
+        menu.querySelector('.rename-btn').onclick = (e) => {
+          e.stopPropagation();
+          const newTitle = prompt('Masukkan nama baru:', photo.title);
+          if (newTitle) {
+            photo.title = newTitle;
+            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+            renderPhotos();
+          }
+        };
+
+        menu.querySelector('.replace-btn').onclick = (e) => {
+          e.stopPropagation();
+          const newUrl = prompt('Masukkan URL foto baru:');
+          if (newUrl) {
+            photo.url = newUrl;
+            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+            renderPhotos();
+          }
+        };
+
+        menu.querySelector('.delete-btn').onclick = (e) => {
+          e.stopPropagation();
+          if (confirm('Hapus foto ini?')) {
+            photos.splice(index, 1);
+            localStorage.setItem('victornzPhotos', JSON.stringify(photos));
+            renderPhotos();
+          }
+        };
 
         container.addEventListener('click', () => {
           lightboxImg.src = photo.url;
           lightbox.style.display = 'flex';
         });
 
+        container.appendChild(pin);
+        container.appendChild(img);
+        container.appendChild(title);
+        container.appendChild(menuBtn);
+        container.appendChild(menu);
         gallery.appendChild(container);
       });
     }
@@ -180,46 +256,6 @@
     lightbox.addEventListener('click', () => {
       lightbox.style.display = 'none';
     });
-
-    addBtn.addEventListener('click', () => fileInput.click());
-
-    // ✅ Upload ke ImgBB (fix versi)
-    fileInput.onchange = async (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-
-      const formData = new FormData();
-      formData.append("image", file);
-
-      try {
-        const response = await fetch(`https://api.imgbb.com/1/upload?key=${API_KEY}`, {
-          method: "POST",
-          body: formData
-        });
-
-        const data = await response.json();
-        console.log(data); // biar bisa dicek di console
-
-        if (data.success && data.data && data.data.display_url) {
-          const newPhoto = {
-            url: data.data.display_url, // 🔥 fix di sini
-            title: prompt("Masukkan judul foto:") || "Tanpa Judul",
-            date: new Date().toLocaleDateString()
-          };
-          photos.push(newPhoto);
-          localStorage.setItem("victornzPhotos", JSON.stringify(photos));
-          renderPhotos();
-        } else {
-          console.error(data);
-          alert("Gagal upload ke ImgBB: " + (data.error?.message || "Tidak diketahui"));
-        }
-      } catch (err) {
-        console.error(err);
-        alert("Terjadi kesalahan saat upload: " + err.message);
-      } finally {
-        fileInput.value = "";
-      }
-    };
 
     renderPhotos();
   </script>
